--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,14 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 
-a {
+p a {
     text-decoration: none;
     color: #999;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
 }
 
 a:hover {
