--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ p {
 }
 
 footer {
-    position: absolute;
+    position: static;
     bottom: 0;
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
