--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,8 @@ footer {
     bottom: 0;
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
-    flex: 1;
-    margin-right: 0;
+    /*flex: 1;
+    margin-right: 0;*/
 }
 
 ul.posts { 
